; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_vt_bi_4t_8w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_vt_bi_4t_8w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32, i32*, i32)* @hevc_vt_bi_4t_8w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_vt_bi_4t_8w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32* %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32* %2, i32** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  store i32 %7, i32* %16, align 4
  %17 = load i32, i32* %16, align 4
  %18 = icmp eq i32 2, %17
  br i1 %18, label %19, label %29

19:                                               ; preds = %8
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32*, i32** %11, align 8
  %23 = load i32, i32* %12, align 4
  %24 = load i32*, i32** %13, align 8
  %25 = load i32, i32* %14, align 4
  %26 = load i32*, i32** %15, align 8
  %27 = load i32, i32* %16, align 4
  %28 = call i32 @hevc_vt_bi_4t_8x2_msa(i32* %20, i32 %21, i32* %22, i32 %23, i32* %24, i32 %25, i32* %26, i32 %27)
  br label %53

29:                                               ; preds = %8
  %30 = load i32, i32* %16, align 4
  %31 = icmp eq i32 6, %30
  br i1 %31, label %32, label %42

32:                                               ; preds = %29
  %33 = load i32*, i32** %9, align 8
  %34 = load i32, i32* %10, align 4
  %35 = load i32*, i32** %11, align 8
  %36 = load i32, i32* %12, align 4
  %37 = load i32*, i32** %13, align 8
  %38 = load i32, i32* %14, align 4
  %39 = load i32*, i32** %15, align 8
  %40 = load i32, i32* %16, align 4
  %41 = call i32 @hevc_vt_bi_4t_8x6_msa(i32* %33, i32 %34, i32* %35, i32 %36, i32* %37, i32 %38, i32* %39, i32 %40)
  br label %52

42:                                               ; preds = %29
  %43 = load i32*, i32** %9, align 8
  %44 = load i32, i32* %10, align 4
  %45 = load i32*, i32** %11, align 8
  %46 = load i32, i32* %12, align 4
  %47 = load i32*, i32** %13, align 8
  %48 = load i32, i32* %14, align 4
  %49 = load i32*, i32** %15, align 8
  %50 = load i32, i32* %16, align 4
  %51 = call i32 @hevc_vt_bi_4t_8x4multiple_msa(i32* %43, i32 %44, i32* %45, i32 %46, i32* %47, i32 %48, i32* %49, i32 %50)
  br label %52

52:                                               ; preds = %42, %32
  br label %53

53:                                               ; preds = %52, %19
  ret void
}

declare dso_local i32 @hevc_vt_bi_4t_8x2_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @hevc_vt_bi_4t_8x6_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @hevc_vt_bi_4t_8x4multiple_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
